# sreality

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-server.bash
sreality/: settings.py
sreality/scrape_sreality/: logs.txt  scrapy.cfg
sreality/scrape_sreality/scrape_sreality/: items.py  middlewares.py  pipelines.py  settings.py
sreality/scrape_sreality/scrape_sreality/spiders/: sreality.py
sreality/server/: app.py
sreality/server/migrations/versions/: 2f334d8ec0cb_add_original_id.py  c94de0e5c2db_create_flats_table.py
sreality/server/templates/: flats.html
