[tool.poetry]
name = "sreality"
version = "0.1.0"
description = ""
authors = ["Gregor Grasselli <gregor.grasselli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.9.0"
SQLAlchemy = "^2.0.19"
Flask = "^2.3.2"
Jinja2 = "^3.1.2"
alembic = "^1.11.1"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.5"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
jedi = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
